# pyWarePlayground

./: Readme.md  backdoor.py  main.py  utils.py
method_1/: Readme.md  __init__.py  api_client.py  pyproject.toml  requirements.txt  search.py  setup.py
method_1/src/api_client/: api_client.py
method_1/src/str_processor/: processor.py
method_2/: __init__.py  case3.md  check.py
method_2/src/check_file_validate/: check.py
method_3/: Readme.md  setup.py
method_3/src/: setup.py
method_4/: pyproject.toml
method_4/screenshotter/: screenshot.py
method_4/test/: unit_test.py
