[project]
name = "method_2"
version = "0.0.1"
dynamic = ["version"]
dependencies = [
  "importlib",
]
requires-python = ">= 3.8"
authors = [
  {name = "Justin Biber", email = "chang10@student.unimelb.edu.au"}
]
maintainers = [
  {name = "Justin Biber", email = "chang10@student.unimelb.edu.au"}
]
description = "You want to make sure the file is validated? Try this"
readme = "README.md"
license = {file = "License"}
keywords = ["check", "file", "validation"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
]
[project.urls]
Repository = "https://github.com/Yao-Wen-Chang/py_obfuscation.git"




[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"
